<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppActivity"
    android:background="#7CD1D1D1"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/HBIconColor"
        app:title=" "
        app:titleMarginStart="50dp"
        android:alpha="0.4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="About"
        app:layout_constraintStart_toEndOf="@id/about_activity_back_btn"
        app:layout_constraintTop_toTopOf="@id/about_activity_back_btn"
        app:layout_constraintBottom_toBottomOf="@id/about_activity_back_btn"
        android:layout_marginStart="20dp"
        />
    <ImageButton
        android:id="@+id/about_activity_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/about_toolbar"
        app:layout_constraintTop_toTopOf="@id/about_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/about_toolbar"
        android:src="@drawable/ic_round_arrow_back_ios_24"
        android:background="@drawable/btn_click_ripple"
        android:onClick="onClick"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        />



    <ImageView
        android:id="@+id/about_app_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/weather_sensei_icon"
        app:layout_constraintTop_toBottomOf="@id/about_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/about_app_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/HBIconColor"
        app:layout_constraintTop_toBottomOf="@id/about_app_logo"
        app:layout_constraintBottom_toBottomOf="@id/about_app_logo"
        app:layout_constraintStart_toStartOf="@id/about_app_logo"
        app:layout_constraintEnd_toEndOf="@id/about_app_logo"
        android:text="@string/app_name"
        />

    <TextView
        android:id="@+id/app_about_version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_app_version"
        app:layout_constraintTop_toBottomOf="@id/about_app_appname"
        app:layout_constraintStart_toStartOf="@id/about_app_appname"
        app:layout_constraintEnd_toEndOf="@id/about_app_appname"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_about_version_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/app_privacy_policy"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/HBIconColor"
        android:text="@string/about_app_paragraph"
        />

    <TextView
        android:id="@+id/app_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/app_terms_conditions"
        app:layout_constraintStart_toStartOf="@id/app_terms_conditions"
        app:layout_constraintEnd_toEndOf="@id/app_terms_conditions"
        android:text="Privacy Policy"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="3dp"
        android:background="@drawable/gradient_bg"
        android:layout_margin="10dp"
        android:textColor="@color/colorAccent"
        />

    <TextView
        android:id="@+id/app_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/about_app_appname"
        app:layout_constraintStart_toStartOf="@id/about_app_appname"
        android:text="Terms and Conditions"
        android:onClick="onClick"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:textColor="@color/colorAccent"
        android:padding="3dp"
        android:background="@drawable/gradient_bg"
        />


</androidx.constraintlayout.widget.ConstraintLayout>